--- a/references.bib
+++ b/references.bib
@@ -1,3 +1,263 @@
+@article{Gentle2004,
+abstract = {Integral proteins in the outer membrane of mitochondria control all aspects of organelle biogenesis, being required for protein import, mitochondrial fission, and, in metazoans, mitochondrial aspects of programmed cell death. How these integral proteins are assembled in the outer membrane had been unclear. In bacteria, Omp85 is an essential component of the protein insertion machinery, and we show that members of the Omp85 protein family are also found in eukaryotes ranging from plants to humans. In eukaryotes, Omp85 is present in the mitochondrial outer membrane. The gene encoding Omp85 is essential for cell viability in yeast, and conditional omp85 mutants have defects that arise from compromised insertion of integral proteins like voltage-dependent anion channel (VDAC) and components of the translocase in the outer membrane of mitochondria (TOM) complex into the mitochondrial outer membrane.},
+author = {Gentle, Ian and Gabriel, Kipros and Beech, Peter and Waller, Ross and Lithgow, Trevor},
+doi = {10.1083/jcb.200310092},
+file = {:home/james/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Gentle et al. - 2004 - The Omp85 family of proteins is essential for outer membrane biogenesis in mitochondria and bacteria.pdf:pdf},
+issn = {0021-9525},
+journal = {The Journal of cell biology},
+month = {jan},
+number = {1},
+pages = {19--24},
+pmid = {14699090},
+publisher = {Rockefeller University Press},
+title = {{The Omp85 family of proteins is essential for outer membrane biogenesis in mitochondria and bacteria.}},
+url = {http://www.ncbi.nlm.nih.gov/pubmed/14699090 http://www.pubmedcentral.nih.gov/articlerender.fcgi?artid=PMC2171957},
+volume = {164},
+year = {2004}
+}
+@article{Wiedemann2003,
+abstract = {Machinery for protein sorting and assembly in the mitochondrial outer membrane},
+author = {Wiedemann, Nils and Kozjak, Vera and Chacinska, Agnieszka and Sch{\"{o}}nfisch, Birgit and Rospert, Sabine and Ryan, Michael T. and Pfanner, Nikolaus and Meisinger, Chris},
+doi = {10.1038/nature01753},
+file = {:home/james/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Wiedemann et al. - 2003 - Machinery for protein sorting and assembly in the mitochondrial outer membrane.pdf:pdf},
+issn = {0028-0836},
+journal = {Nature},
+month = {jul},
+number = {6948},
+pages = {565--571},
+publisher = {Nature Publishing Group},
+title = {{Machinery for protein sorting and assembly in the mitochondrial outer membrane}},
+url = {http://www.nature.com/articles/nature01753},
+volume = {424},
+year = {2003}
+}
+@article{Paschen2003,
+abstract = {Evolutionary conservation of biogenesis of $\beta$-barrel membrane proteins},
+author = {Paschen, Stefan A. and Waizenegger, Thomas and Stan, Tincuta and Preuss, Marc and Cyrklaff, Marek and Hell, Kai and Rapaport, Doron and Neupert, Walter},
+doi = {10.1038/nature02208},
+file = {:home/james/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Paschen et al. - 2003 - Evolutionary conservation of biogenesis of $\beta$-barrel membrane proteins.pdf:pdf},
+issn = {0028-0836},
+journal = {Nature},
+month = {dec},
+number = {6968},
+pages = {862--866},
+publisher = {Nature Publishing Group},
+title = {{Evolutionary conservation of biogenesis of $\beta$-barrel membrane proteins}},
+url = {http://www.nature.com/articles/nature02208},
+volume = {426},
+year = {2003}
+}
+@article{McFadden2001,
+abstract = {The origin of oxygenic photosynthesis must rank just after the origin of life itself as one of the most significant events in the history of life. The early photosynthesizers, which Bill Schopf has shown were similar to modern cyanobacteria (32), made earth a nicer place to live by quietly cranking},
+author = {McFadden, G I},
+doi = {10.1104/PP.125.1.50},
+file = {:home/james/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/McFadden - 2001 - Chloroplast origin and integration.pdf:pdf},
+issn = {0032-0889},
+journal = {Plant physiology},
+month = {jan},
+number = {1},
+pages = {50--3},
+pmid = {11154294},
+publisher = {American Society of Plant Biologists},
+title = {{Chloroplast origin and integration.}},
+url = {http://www.ncbi.nlm.nih.gov/pubmed/11154294 http://www.pubmedcentral.nih.gov/articlerender.fcgi?artid=PMC1539323},
+volume = {125},
+year = {2001}
+}
+@article{Chacinska2009,
+abstract = {Most mitochondrial proteins are synthesized on cytosolic ribosomes and must be imported across one or both mitochondrial membranes. There is an amazingly versatile set of machineries and mechanisms, and at least four different pathways, for the importing and sorting of mitochondrial precursor proteins. The translocases that catalyze these processes are highly dynamic machines driven by the membrane potential, ATP, or redox reactions, and they cooperate with molecular chaperones and assembly complexes to direct mitochondrial proteins to their correct destinations. Here, we discuss recent insights into the importing and sorting of mitochondrial proteins and their contributions to mitochondrial biogenesis.},
+author = {Chacinska, Agnieszka and Koehler, Carla M and Milenkovic, Dusanka and Lithgow, Trevor and Pfanner, Nikolaus},
+doi = {10.1016/j.cell.2009.08.005},
+file = {:home/james/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Chacinska et al. - 2009 - Importing mitochondrial proteins machineries and mechanisms.pdf:pdf},
+issn = {1097-4172},
+journal = {Cell},
+month = {aug},
+number = {4},
+pages = {628--44},
+pmid = {19703392},
+publisher = {Elsevier},
+title = {{Importing mitochondrial proteins: machineries and mechanisms.}},
+url = {http://www.ncbi.nlm.nih.gov/pubmed/19703392 http://www.pubmedcentral.nih.gov/articlerender.fcgi?artid=PMC4099469},
+volume = {138},
+year = {2009}
+}
+@article{Gray1999,
+abstract = {The serial endosymbiosis theory is a favored model for explaining the origin of mitochondria, a defining event in the evolution of eukaryotic cells. As usually described, this theory posits that mitochondria are the direct descendants of a bacterial endosymbiont that became established at an early stage in a nucleus-containing (but amitochondriate) host cell. Gene sequence data strongly support a monophyletic origin of the mitochondrion from a eubacterial ancestor shared with a subgroup of the alpha-Proteobacteria. However, recent studies of unicellular eukaryotes (protists), some of them little known, have provided insights that challenge the traditional serial endosymbiosis-based view of how the eukaryotic cell and its mitochondrion came to be. These data indicate that the mitochondrion arose in a common ancestor of all extant eukaryotes and raise the possibility that this organelle originated at essentially the same time as the nuclear component of the eukaryotic cell rather than in a separate, subsequent event.},
+author = {Gray, M W and Burger, G and Lang, B F},
+doi = {10.1126/SCIENCE.283.5407.1476},
+issn = {0036-8075},
+journal = {Science (New York, N.Y.)},
+month = {mar},
+number = {5407},
+pages = {1476--81},
+pmid = {10066161},
+publisher = {American Association for the Advancement of Science},
+title = {{Mitochondrial evolution.}},
+url = {http://www.ncbi.nlm.nih.gov/pubmed/10066161},
+volume = {283},
+year = {1999}
+}
+@article{Noinaj2014,
+abstract = {The outer membrane of Gram-negative bacteria is replete with a host of $\beta$-barrel outer membrane proteins (OMPs). Despite serving a variety of essential functions, including immune response evasion, the exact mechanism of OMP folding and membrane insertion remains largely unclear. The $\beta$-barrel assembly machinery complex is required for OMP biogenesis. Crystal structures and molecular dynamics (MD) simulations of the central and essential component, BamA, suggest a mechanism involving lateral opening of its barrel domain. MD simulations reported here reveal an additional feature of BamA: a substrate exit pore positioned above the lateral opening site. Disulfide crosslinks that prevent lateral opening and exit pore formation result in a loss of BamA function, which can be fully rescued by the reductant tris(2-carboxyethyl)phosphine. These data provide strong evidence that lateral opening and exit pore formation are required for BamA function.},
+author = {Noinaj, Nicholas and Kuszak, Adam J and Balusek, Curtis and Gumbart, James C and Buchanan, Susan K},
+doi = {10.1016/j.str.2014.05.008},
+file = {:home/james/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Noinaj et al. - 2014 - Lateral opening and exit pore formation are required for BamA function.pdf:pdf},
+issn = {1878-4186},
+journal = {Structure (London, England : 1993)},
+month = {jul},
+number = {7},
+pages = {1055--62},
+pmid = {24980798},
+publisher = {Elsevier},
+title = {{Lateral opening and exit pore formation are required for BamA function.}},
+url = {http://www.ncbi.nlm.nih.gov/pubmed/24980798 http://www.pubmedcentral.nih.gov/articlerender.fcgi?artid=PMC4100585},
+volume = {22},
+year = {2014}
+}
+@article{Wu2005,
+abstract = {Gram-negative bacteria have an outer membrane (OM) that functions as a barrier to protect the cell from toxic compounds such as antibiotics and detergents. The OM is a highly asymmetric bilayer composed of phospholipids, glycolipids, and proteins. Assembly of this essential organelle occurs outside the cytoplasm in an environment that lacks obvious energy sources such as ATP, and the mechanisms involved are poorly understood. We describe the identification of a multiprotein complex required for the assembly of proteins in the OM of Escherichia coli. We also demonstrate genetic interactions between genes encoding components of this protein assembly complex and imp, which encodes a protein involved in the assembly of lipopolysaccharides (LPS) in the OM. These genetic interactions suggest a role for YfgL, one of the lipoprotein components of the protein assembly complex, in a homeostatic control mechanism that coordinates the overall OM assembly process.},
+author = {Wu, Tao and Malinverni, Juliana and Ruiz, Natividad and Kim, Seokhee and Silhavy, Thomas J. and Kahne, Daniel},
+doi = {10.1016/J.CELL.2005.02.015},
+file = {:home/james/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Wu et al. - 2005 - Identification of a Multicomponent Complex Required for Outer Membrane Biogenesis in Escherichia coli.pdf:pdf},
+issn = {0092-8674},
+journal = {Cell},
+month = {apr},
+number = {2},
+pages = {235--245},
+publisher = {Cell Press},
+title = {{Identification of a Multicomponent Complex Required for Outer Membrane Biogenesis in Escherichia coli}},
+url = {https://www.sciencedirect.com/science/article/pii/S0092867405001601},
+volume = {121},
+year = {2005}
+}
+@article{Volokhina2011,
+abstract = {The periplasmic chaperones Skp, SurA, and DegP are implicated in the biogenesis of outer membrane proteins (OMPs) in Escherichia coli. Here, we investigated whether these chaperones exert similar functions in Neisseria meningitidis. Although N. meningitidis does not contain a homolog of the protease/chaperone DegP, it does possess a homolog of another E. coli protein, DegQ, which can functionally replace DegP when overproduced. Hence, we examined whether in N. meningitidis, DegQ acts as a functional homolog of DegP. Single skp, surA, and degQ mutants were easily obtained, showing that none of these chaperones is essential in N. meningitidis. Furthermore, all combinations of double mutants were generated and no synthetic lethality was observed. The absence of SurA or DegQ did not affect OMP biogenesis. In contrast, the absence of Skp resulted in severely lower levels of the porins PorA and PorB but not of other OMPs. These decreased levels were not due to proteolytic activity of DegQ, since porin levels remained low in a skp degQ double mutant, indicating that neisserial DegQ is not a functional homolog of E. coli DegP. The absence of Skp resulted in lower expression of the porB gene, as shown by using a P(porB)-lacZ fusion. We found no cross-species complementation when Skp of E. coli or N. meningitidis was heterologously expressed in skp mutants, indicating that Skp functions in a species-specific manner. Our results demonstrate an important role for Skp but not for SurA or DegQ in OMP biogenesis in N. meningitidis.},
+author = {Volokhina, Elena B and Grijpstra, Jan and Stork, Michiel and Schilders, Ingrid and Tommassen, Jan and Bos, Martine P},
+doi = {10.1128/JB.00532-10},
+file = {:home/james/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Volokhina et al. - 2011 - Role of the periplasmic chaperones Skp, SurA, and DegQ in outer membrane protein biogenesis in Neisseria menin.pdf:pdf},
+issn = {1098-5530},
+journal = {Journal of bacteriology},
+month = {apr},
+number = {7},
+pages = {1612--21},
+pmid = {21296967},
+publisher = {American Society for Microbiology Journals},
+title = {{Role of the periplasmic chaperones Skp, SurA, and DegQ in outer membrane protein biogenesis in Neisseria meningitidis.}},
+url = {http://www.ncbi.nlm.nih.gov/pubmed/21296967 http://www.pubmedcentral.nih.gov/articlerender.fcgi?artid=PMC3067652},
+volume = {193},
+year = {2011}
+}
+@article{Lazar1996,
+abstract = {Many proteins require enzymatic assistance in order to achieve a functional conformation. One rate-limiting step in protein folding is the cis-trans isomerization of prolyl residues, a reaction catalyzed by prolyl isomerases. SurA, a periplasmic protein of Escherichia coli, has sequence similarity with the prolyl isomerase parvulin. We tested whether SurA was involved in folding periplasmic and outer membrane proteins by using trypsin sensitivity as an assay for protein conformation. We determined that the efficient folding of three outer membrane proteins (OmpA, OmpF, and LamB) requires SurA in vivo, while the folding of four periplasmic proteins was independent of SurA. We conclude that SurA assists in the folding of certain secreted proteins.},
+author = {Lazar, S W and Kolter, R},
+doi = {10.1128/JB.178.6.1770-1773.1996},
+file = {:home/james/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Lazar, Kolter - 1996 - SurA assists the folding of Escherichia coli outer membrane proteins.pdf:pdf},
+issn = {0021-9193},
+journal = {Journal of bacteriology},
+month = {mar},
+number = {6},
+pages = {1770--3},
+pmid = {8626309},
+publisher = {American Society for Microbiology Journals},
+title = {{SurA assists the folding of Escherichia coli outer membrane proteins.}},
+url = {http://www.ncbi.nlm.nih.gov/pubmed/8626309 http://www.pubmedcentral.nih.gov/articlerender.fcgi?artid=PMC177866},
+volume = {178},
+year = {1996}
+}
+@article{Zimmer2008,
+abstract = {This study reports the structure of the SecA–SecY complex from bacteria. The structure reveals major conformational changes between both partners and provides novel insights into the path taken by a translocating protein.},
+author = {Zimmer, Jochen and Nam, Yunsun and Rapoport, Tom A.},
+doi = {10.1038/nature07335},
+file = {:home/james/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Zimmer, Nam, Rapoport - 2008 - Structure of a complex of the ATPase SecA and the protein-translocation channel.pdf:pdf},
+issn = {0028-0836},
+journal = {Nature},
+month = {oct},
+number = {7215},
+pages = {936--943},
+publisher = {Nature Publishing Group},
+title = {{Structure of a complex of the ATPase SecA and the protein-translocation channel}},
+url = {http://www.nature.com/articles/nature07335},
+volume = {455},
+year = {2008}
+}
+@article{Papanikou2007,
+abstract = {The Sec pathway, which transports proteins across membranes, is ubiquitous and essential for viability in all three domains of life. At the core of the pathway is the translocase, a dynamic nanomachine that catalyses transmembrane crossing. This Review considers the latest data on the structure and function of the bacterial Sec translocase.},
+author = {Papanikou, Effrosyni and Karamanou, Spyridoula and Economou, Anastassios},
+doi = {10.1038/nrmicro1771},
+file = {:home/james/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Papanikou, Karamanou, Economou - 2007 - Bacterial protein secretion through the translocase nanomachine.pdf:pdf},
+issn = {1740-1526},
+journal = {Nature Reviews Microbiology},
+month = {nov},
+number = {11},
+pages = {839--851},
+publisher = {Nature Publishing Group},
+title = {{Bacterial protein secretion through the translocase nanomachine}},
+url = {http://www.nature.com/articles/nrmicro1771},
+volume = {5},
+year = {2007}
+}
+@article{Driessen2008,
+abstract = {About 25{\%} to 30{\%} of the bacterial proteins function in the cell envelope or outside of the cell. These proteins are synthesized in the cytosol, and the vast majority is recognized as a ribosome-bound nascent chain by the signal recognition particle (SRP) or by the secretion-dedicated chaperone SecB. Subsequently, they are targeted to the Sec translocase in the cytoplasmic membrane, a multimeric membrane protein complex composed of a highly conserved protein-conducting channel, SecYEG, and a peripherally bound ribosome or ATP-dependent motor protein SecA. The Sec translocase mediates the translocation of proteins across the membrane and the insertion of membrane proteins into the cytoplasmic membrane. Translocation requires the energy sources of ATP and the proton motive force (PMF) while the membrane protein insertion is coupled to polypeptide chain elongation at the ribosome. This review summarizes the present knowledge of the mechanism and structure of the Sec translocase, with a special emphasis on unr...},
+author = {Driessen, Arnold J.M. and Nouwen, Nico},
+doi = {10.1146/annurev.biochem.77.061606.160747},
+issn = {0066-4154},
+journal = {Annual Review of Biochemistry},
+keywords = {SecA,SecY,chaperone,membrane protein,proton motive force,translocase},
+month = {jun},
+number = {1},
+pages = {643--667},
+publisher = { Annual Reviews },
+title = {{Protein Translocation Across the Bacterial Cytoplasmic Membrane}},
+url = {http://www.annualreviews.org/doi/10.1146/annurev.biochem.77.061606.160747},
+volume = {77},
+year = {2008}
+}
+@article{Bechtluft2010,
+abstract = {SecB is a molecular chaperone in Gram-negative bacteria dedicated to the post-translational translocation of proteins across the cytoplasmic membrane. The entire surface of this chaperone is used for both of its native functions in protein targeting and unfolding. Single molecule studies revealed how SecB affects the folding pathway of proteins and how it prevents the tertiary structure formation and aggregation to support protein translocation.},
+author = {Bechtluft, Philipp and Nouwen, Nico and Tans, Sander J. and Driessen, Arnold J. M.},
+doi = {10.1039/B915435C},
+issn = {1742-206X},
+journal = {Mol. BioSyst.},
+month = {mar},
+number = {4},
+pages = {620--627},
+publisher = {The Royal Society of Chemistry},
+title = {{SecB—A chaperone dedicated to protein translocation}},
+url = {http://xlink.rsc.org/?DOI=B915435C},
+volume = {6},
+year = {2010}
+}
+@article{Muller2011,
+author = {M{\"{u}}ller, Jonas E.N. and Papic, Drazen and Ulrich, Thomas and Grin, Iwan and Sch{\"{u}}tz, Monika and Oberhettinger, Philipp and Tommassen, Jan and Linke, Dirk and Dimmer, Kai S. and Autenrieth, Ingo B. and Rapaport, Doron},
+doi = {10.1091/mbc.e10-12-0943},
+editor = {Glick, Benjamin},
+file = {:home/james/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/M{\"{u}}ller et al. - 2011 - Mitochondria can recognize and assemble fragments of a $\beta$-barrel structure.pdf:pdf},
+issn = {1059-1524},
+journal = {Molecular Biology of the Cell},
+month = {may},
+number = {10},
+pages = {1638--1647},
+title = {{Mitochondria can recognize and assemble fragments of a $\beta$-barrel structure}},
+url = {http://www.molbiolcell.org/doi/10.1091/mbc.e10-12-0943},
+volume = {22},
+year = {2011}
+}
+@article{Ulrich2015,
+abstract = {The vast majority of outer membrane (OM) proteins in Gram-negative bacteria belongs to the class of membrane-embedded $\beta$-barrel proteins. Besides Gram-negative bacteria, the presence of $\beta$-barrel proteins is restricted to the OM of the eukaryotic organelles mitochondria and chloroplasts that were derived from prokaryotic ancestors. The assembly of these proteins into the corresponding OM is in each case facilitated by a dedicated protein complex that contains a highly conserved central $\beta$-barrel protein termed BamA/YaeT/Omp85 in Gram-negative bacteria and Tob55/Sam50 in mitochondria. However, little is known about the exact mechanism by which these complexes mediate the integration of $\beta$-barrel precursors into the lipid bilayer. Interestingly, previous studies showed that during evolution, these complexes retained the ability to functionally assemble $\beta$-barrel proteins from different origins. In this review we summarize the current knowledge on the biogenesis pathway of $\beta$-barrel proteins in Gram-negative bacteria, mitochondria and chloroplasts and focus on the commonalities and divergences that evolved between the different $\beta$-barrel assembly machineries.},
+author = {Ulrich, Thomas and Rapaport, Doron},
+doi = {10.1016/J.IJMM.2014.12.009},
+file = {:home/james/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Ulrich, Rapaport - 2015 - Biogenesis of beta-barrel proteins in evolutionary context.pdf:pdf},
+issn = {1438-4221},
+journal = {International Journal of Medical Microbiology},
+month = {feb},
+number = {2},
+pages = {259--264},
+publisher = {Urban {\&} Fischer},
+title = {{Biogenesis of beta-barrel proteins in evolutionary context}},
+url = {https://www.sciencedirect.com/science/article/pii/S1438422114001684},
+volume = {305},
+year = {2015}
+}
 @article{Fischer1994,
 abstract = {Porins are voltage-gated diffusion pores found in all eukaryotic kingdoms. Here we describe, for the first time, the identification and characterization of two cDNAs encoding porins from plants. Peptide sequences obtained from a 30-kDa protein of envelope membranes from pea root plastids allowed the isolation of two cDNA clones from pea and maize. On the protein level, both proteins are homologous by 58{\%}. Sequence comparison against the Swiss-Prot sequence data base revealed a homology of about 25{\%} to mitochondrial porins from fungi and human. Computer-aided predictions of the secondary structure of the plant porins revealed the presence of 16 antiparallel beta-strands that are also found in mitochondrial porins. Porins from non-green plastids and from the outer mitochondrial membrane were reconstituted into planar lipid bilayers. The proteins showed high pore-forming activities and similar single-channel conductances. In vitro translated porin was preferentially imported only into non-green plastids but not into chloroplasts. To our knowledge, this is the first example of selective import of a plastid protein into different types of plastids. This finding is in line with the observation that an immunoreactive 30-kDa band was only found in non-green plastids and mitochondria but not in chloroplasts. We conclude that mitochondria and non-green plastids possess homologous porin proteins, whereas chloroplasts are characterized by a different type of porin.},
 author = {Fischer, K and Weber, A and Brink, S and Arbinger, B and Sch{\"{u}}nemann, D and Borchert, S and Heldt, H W and Popp, B and Benz, R and Link, T A},
