--- a/thesis.tex
+++ b/thesis.tex
@@ -60,6 +60,7 @@
 \newacronym{ap}{AP}{Arrest Peptide}
 \newacronym{emc}{EMC}{ER Membrane protein Complex}
 \newacronym{em}{EM}{Electron microscopy}
+\newacronym{tom}{TOM}{translocase of the outer membrane}
 
 
 
